<resources>
    <string name="app_name">Condo eLibrary</string>
    <string name="email">User Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="signedin">Not signed in!</string>
    <string name="login">login!</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_book_store">BookStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ivan Richard</string>
    <string name="nav_header_subtitle">ivanRichard@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
