<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bluebackground">

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="470dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--The image -->
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/aboriginal_services_logo"
                        android:contentDescription="TODO">
                    </ImageView>

                    <!--The password elements-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:layout_marginTop="10dp"
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/email">
                        </EditText>

                        <EditText
                            android:layout_marginTop="10dp"
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/password"/>
                    </LinearLayout>

                    <!--The register layout-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/buttonbackground"
                            android:text="@string/register"
                            android:textSize="25dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>

                    <!--The login layout-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signedin"
                            android:textSize="20dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:background="@drawable/buttonbackground"
                            android:text="@string/login"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:textSize="20dp"/>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


</LinearLayout>